src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>RE_Speak__c</fullName>
        <description>DESCRIPTION</description>
        <label>RE Speak</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_State_Employer__c</fullName>
        <description>STATE</description>
        <label>RE State Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Street_Employer__c</fullName>
        <description>ADDRESS_BLOCK</description>
        <label>RE Street Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Title__c</fullName>
        <description>TITLE_1</description>
        <label>RE Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Type__c</fullName>
        <description>PHONETYPEID</description>
        <label>RE Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_What_is_your_race_ethnicity__c</fullName>
        <description>ETHNICITY</description>
        <label>RE What Is Your Race/Ethnicity?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Work_Email__c</fullName>
        <description>NUM</description>
        <label>RE Work Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Work_Phone__c</fullName>
        <description>NUM</description>
        <label>RE Work Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Work_Phone_c__c</fullName>
        <description>NUM</description>
        <label>RE Work Phone_c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Employer1__c</fullName>
        <description>It holds Employeer Zip</description>
        <label>RE Zip Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Employer__c</fullName>
        <description>POST_CODE</description>
        <label>RE Zip Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Zip_Referrer__c</fullName>
        <description>POST_CODE</description>
        <label>RE Zip Referrer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_Details__c</fullName>
        <description>It will capture the Child’s Ethnicity other details</description>
        <label>Race/Ethnicity Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity__c</fullName>
        <description>It will be used for statistical purpose</description>
        <label>Race/Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian or Alaska Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian/Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White or Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <description>This field used to select more than language which can be read</description>
        <label>Read</label>
        <picklist>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French and French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Publicity_Candidate__c</fullName>
        <description>This field is used to give more details to publicity candidate</description>
        <inlineHelpText>Please add notes on why you feel this wish child would be a good publicity candidate.</inlineHelpText>
        <label>Reason for Publicity Candidate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Task_Completed_Date__c</fullName>
        <description>Used to hold the value of recent task completed date</description>
        <label>Recent Task Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recently_Completed_Training_Date__c</fullName>
        <description>Used to hold the recently completed training date</description>
        <label>Recently Completed Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <description>Test</description>
        <label>Hidden First Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Age__c</fullName>
        <description>It holds the details of Referral age (birthday date - leadcreationdate)</description>
        <formula>IF( NOT(ISBLANK(Birthdate)) , 
IF(DATE(2000 , MONTH( Birthdate) , DAY( Birthdate) ) &lt;= DATE( 2000 , MONTH(Lead_Created_Date__c) , DAY(Lead_Created_Date__c) ), 
YEAR (Lead_Created_Date__c) - YEAR (Birthdate), 
YEAR (Lead_Created_Date__c) - YEAR (Birthdate) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer_City__c</fullName>
        <description>It will capture city of the wish referrer.</description>
        <label>Referrer City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <description>It will capture the referrer Email.</description>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_FirstName__c</fullName>
        <description>It capture the wish child Referrer name.</description>
        <label>Referrer FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Last_Name__c</fullName>
        <description>It capture the wish child Referrer name.</description>
        <label>Referrer Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <description>It will capture the phone number of Referrer</description>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Zip__c</fullName>
        <description>It capture the wish referrer Zip code.</description>
        <label>Referrer Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Chapter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>It holds the contact region chapter</description>
        <label>Chapter Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Region Chapter)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the region code for chapter</description>
        <inlineHelpText>1.Please select All fields Radio Button to search Region Code based on Name in Search Dialogue box.
2.Region Chapter needs to be filled in order to see the Region Code based on Chapters.</inlineHelpText>
        <label>Region Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Region_Chapter__c</field>
                <operation>equals</operation>
                <valueField>Regions__c.Chapter_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Regions__c.Chapter_Name__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Regions__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedContacts__c</fullName>
        <description>This field is used to store the related contacts (ie) Father, Mother and Parent Legal Guardian.</description>
        <label>Hidden Related Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>It will hold the relationship infromation</description>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepsister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepbrother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granddaugther</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Wish_Child__c</fullName>
        <description>It will capture Adult Emergency Contact Relationship to Wish Child</description>
        <label>Relationship To Wish Child (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residing_with_Wish_child__c</fullName>
        <description>It will indicate that participant is residing with wish child or not.</description>
        <label>Residing With Wish Child</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restaurant__c</fullName>
        <description>It will hold the Restaurant details.</description>
        <label>Restaurant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD1_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 1.</description>
        <label>Secondary Diagnosis 1 Cond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD1_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds Secondary Diagnosis value.</description>
        <label>Secondary Diagnosis 1 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Diagnosis 1 ICD-10 Code)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD2_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 2.</description>
        <label>Secondary Diagnosis 2 Cond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD2_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 2.</description>
        <label>Secondary Diagnosis 2 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Diagnosis 2 ICD-10 Code)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SD3_Condition_Description__c</fullName>
        <description>It holds the condition description for Secoundary Diagnosis 3.</description>
        <label>Secondary Diagnosis 3 Cond Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD3_ICD_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It contains ICD code for Secondary Diagnosis 3.</description>
        <label>Secondary Diagnosis 3 ICD-10 Code</label>
        <referenceTo>ICD_Codes__c</referenceTo>
        <relationshipLabel>Contacts (Secondary Diagnosis 3 ICD-10 Code)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Same_as_Household_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Update contact info page.</description>
        <label>Same As Household Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Recipient_Email__c</fullName>
        <description>This field is used to capture the second recipient email for getting signature for wish receipt form</description>
        <label>Hidden Second Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Recipient_Name__c</fullName>
        <description>This field is used to capture the name of the second recipient</description>
        <label>Hidden Second Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>It holds the short description of ICD code.</description>
        <formula>ICD_10_Code__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_Age__c</fullName>
        <description>It hold the age of the Sibling.</description>
        <label>Sibling Age</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snack_Food__c</fullName>
        <description>This will capture the wish child&apos;s snack food details.</description>
        <label>Snack Food</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Link__c</fullName>
        <description>Make-A-Wish would like to stay connected through social media. If interested, please
provide contact information for each site on which you are active.</description>
        <inlineHelpText>Make-A-Wish would like to stay connected through social media. If interested, please
provide contact information for each site on which you are active.</inlineHelpText>
        <label>Social Media Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speak__c</fullName>
        <description>This filed used to select more than one language which can speak</description>
        <label>Speak</label>
        <picklist>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French and French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specialty_Comments__c</fullName>
        <description>It will capture comments regarding speciality</description>
        <label>Specialty Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Notes__c</fullName>
        <description>Notes related to a medical professional&apos;s specialty or areas of practice</description>
        <label>Specialty Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>It holds the details about the Medical Professional Specialty</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Brain Tumor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Care Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Pediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genetics &amp; Metabolism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genitourinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hematology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otolaryngology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palliative Care Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Medicine &amp; Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transplant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma &amp; Emergency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sport_Athlete__c</fullName>
        <description>It will capture the Wish Child&apos;s  favorite Sport/Athlete details</description>
        <label>Sport/Athlete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Employer__c</fullName>
        <description>It will hold the state value of the employer</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>It will hold the state information.</description>
        <label>Hidden State</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Employer__c</fullName>
        <description>It will hold the street value of employer</description>
        <label>Street</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>It will hold the value of the street name.</description>
        <label>Street</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>This field used to get suffix value</description>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LVN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R.Ph.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PharmD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TV_Show__c</fullName>
        <description>It will capture the wish child&apos;s favorite TV show details</description>
        <label>TV Show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Shirt_Size__c</fullName>
        <description>It will capture the wish child T.Shirt size</description>
        <label>T-Shirt Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify the record is test record</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_is_my_wish_because__c</fullName>
        <description>It capture the Wish reason of a Wish Child.</description>
        <label>This Is My Wish Because…</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timesheet_Date__c</fullName>
        <description>Used to get the time sheet date</description>
        <label>Timesheet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_me_the_most_important_part_of_my_wish__c</fullName>
        <description>It capture the Most Important part of Wish of the Wish Child.</description>
        <label>To Me,The Most Important Part Of My Wish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Recommendation__c</fullName>
        <description>It holds the travel recommendation for wish child</description>
        <label>Travel Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Subspecialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to display the treatment subspecialty from the condition description</description>
        <label>Treatment Subspecialty</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>